aliasing input properties

--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,7 +1,7 @@
 
 <span
   class ="fa fa-2x "
-  [class.fa-address-book] ='isFavorite'
-  [class.fa-address-card]='!isFavorite'
+  [class.fa-address-book] ='isSelected'
+  [class.fa-address-card]='!isSelected'
   (click)='onClick()'
 ></span>
