--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,7 +1,7 @@
 
 <span
   class ="fa fa-2x "
-  [ngclass]="{
+  [ngClass]="{
     'fa-address-book':isSelected,
     'fa-address-card':!isSelected
   }"
