--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
-<div *ngIf="courses.length> 0; else noCourses">
-  List of courses
-</div>
-<ng-template [ngIf]="courses.length > 0">
-  <div>
-    List of courses
-  </div>
-</ng-template>
-<ng-template [ngIf]="!(courses.length > 0) ">
-  No courses
-</ng-template>
+<button
+  [ngStyle]="{
+     'backgroundColor': canSave ? 'blue': 'gray',
+     'color': canSave ? 'white': 'black',
+     'fontWeight': canSave ? 'bold': 'normal'
+
+  }"
+>Save
+</button>
 
