safe traversal operator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<button
-  [ngStyle]="{
-     'backgroundColor': canSave ? 'blue': 'gray',
-     'color': canSave ? 'white': 'black',
-     'fontWeight': canSave ? 'bold': 'normal'
-
-  }"
->Save
-</button>
+<span>{{ task.assignee?.name }}</span>
 
