zippycomponent exercise complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<input tpype="text" [appInputFormat] ="'uppercase'">
+<app-zippy title ="Shipping Details">
+   Shipping Details Content
+</app-zippy>
 
