--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,8 +1,9 @@
 <form>
   <div class="form-group">
     <label for="firstName">First Name</label>
-  <input ngModel name="firstName" #firstName="ngModel" (change)="log
+  <input required ngModel name="firstName" #firstName="ngModel" (change)="log
 (firstName)"id="firstName" type="text" class="form-control">
+  <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid"> First Name required.</div>
   </div>
   <div class="form-group">
     <label for="comment"> Comment</label>
